--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
         <li><a class="buttoner" href="main.html">Calculation</a></li>
     </ul>
     <div>
-    <form style= "font-size: 24px; margin-bottom: 10px; padding: 10px;" action="mailto:moshimo90696@gmail.com" method="post" enctype="text/plain">
+    <form style= "font-weight: bold; font-size: 24px; margin-bottom: 10px; padding: 10px;" action="mailto:moshimo90696@gmail.com" method="post" enctype="text/plain">
         Name:<br>
         <input type="text" name="name"><br>
         E-mail:<br>
         <input type="text" name="mail"><br>
         Message:<br>
-        <input type="text" name="comment" size="50"><br><br>
+        <textarea style="text-overflow: ellipsis; min-height: 100px;" name="comment" rows="10" cols="30" size="50"></textarea><br><br>
         <input class="buttoner" type="submit" value="Send">
         <input class="buttoner" type="reset" value="Reset">
         </form>
