--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,12 @@
                 <td>Java, PostgreSQL, JPA, Postman, Springboot, Git, Eclipse, Maven</td>
                 <td><a href="https://github.com/Mihso/spring-assignment-quiz-api-Mihso">Quiz API</a></td>
             </tr>
-
+            <tr>
+                <td>Schema Design</td>
+                <td>SQL requests to PostgreSQL that pull data about people, locations, and interests.</td>
+                <td> SQL, PostgreSQL</td>
+                <td><a href="https://github.com/Mihso/java-assignments-schema-design-Mihso">Schema Design</a></td>
+            </tr>
             <tr>
                 <td>Yelp</td>
                 <td>A movie-review application made with a group of 4 others.</td>
