--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <img id="profile" style=" border-width: 5px; border-radius: 20px; border-color: black; border-style: groove; max-width: 200px; max-height: 200px;"/>
     </picture>
     <div style="margin-bottom:10px;">
-        <div class="mainBody" style="margin:auto; margin-top: 10px; max-width: 60%;">
+        <div class="mainBody2" style="margin:auto; margin-top: 10px; max-width: 60%;">
             <p style="align-self: center;">Matthew Oshimo is a skilled software engineer with thorough education from both the Hack Reactor Software Engineering Immersive program and UC Davis with a bachelor’s degree in Cinema and Digital Media. Through this education, he has deep insight into user accessibility and takes the time to ensure the success of fellow engineers. He enjoys building comprehensible Java, JavaScript, and Python code, displayed in his work on a movie review application that allows users to view information on the latest movies and write reviews. He also possesses exceptional analytical and problem-solving skills that stem from strong pattern-recognition capabilities.</p>
         </div>
     </div>
