--- a/home.html
+++ b/home.html
@@ -12,14 +12,14 @@
         <div id ="animate" class="tester" onClick="activate()" style="max-width: fit-content; position: relative;">Portfolio</div>
     </header>
     <ul>
-        <li><a class="buttoner" href="projects.html">Projects</a></li>
         <li><a class="buttoner" href="about.html">About</a></li>
+        <li><a class="buttoner" href="projects.html">Projects</a></li>
         <li><a class="buttoner" href="main.html">Calculation</a></li>
         <li><a class="buttoner" href="contact.html">Contact</a></li>
     </ul>
     <main>
     <div style ="width:50%; float:left ;">
-    <h1>About Myself</h1>
+    <h1>Matthew Oshimo</h1>
     <picture>
         <img id="profile" style=" border-width: 5px; border-radius: 20px; border-color: black; border-style: groove; max-width: 200px; max-height: 200px;"/>
     </picture>
