--- a/contact.html
+++ b/contact.html
@@ -9,25 +9,31 @@
 </head>
 <body>
     <header>Contact</header>
-    <ul>
+    <ul style="margin-bottom: 10px;">
         <li><a class="buttoner" href="home.html">Profile</a></li>
         <li><a class="buttoner" href="about.html">About</a></li>
         <li><a class="buttoner" href="projects.html">Projects</a></li>
         <li><a class="buttoner" href="main.html">Calculation</a></li>
     </ul>
-    <div>
-    <form style= "font-weight: bold; font-size: 24px; margin-bottom: 10px; padding: 10px;" action="mailto:moshimo90696@gmail.com" method="post" enctype="text/plain">
+    <div style=" background-color: orange; border-width: 20px; border-color: rgb(0, 48, 48); border-style: inset; border-radius: 20px;">
+        <div style="background-color: rgb(211, 137, 0); margin: 10px; border-width: 20px; border-color: rgb(0, 48, 48); border-style: inset; border-radius: 20px;">
+            <div style=" background-color: rgb(148, 96, 0); margin: 10px; border-width: 20px; border-color: rgb(0, 48, 48); border-style: inset; border-radius: 20px;">
+                <div style="background-color: rgb(80, 52, 0); margin: 10px; border-width: 20px; border-color: rgb(0, 48, 48); border-style: inset; border-radius: 20px;">
+    <form style= "font-style: italic; color: aquamarine; font-weight: bold; font-size: 24px; margin-bottom: 10px; padding: 10px;" action="mailto:moshimo90696@gmail.com" method="post" enctype="text/plain">
         Name:<br>
-        <input type="text" name="name"><br>
+        <input style="border-style: double; border-width: 10px;" type="text" name="name"><br>
         E-mail:<br>
-        <input type="text" name="mail"><br>
+        <input style="border-style: double; border-width: 10px;"type="text" name="mail"><br>
         Message:<br>
-        <textarea style="text-overflow: ellipsis; min-height: 100px;" name="comment" rows="10" cols="30" size="50"></textarea><br><br>
+        <textarea style="border-style: double; border-width: 10px; text-overflow: ellipsis; min-height: 100px;" name="comment" rows="10" cols="30" size="50"></textarea><br><br>
         <input class="buttoner" type="submit" value="Send">
         <input class="buttoner" type="reset" value="Reset">
         </form>
     </div>
-    <footer>
+    </div>
+    </div>
+    </div>
+    <footer style="margin-top: 10px;">
         <h1 style="font-size: 24px;">Links</h1>
            <a class="linker" href="https://www.linkedin.com/in/mihso-soap/">LinkedIn</a>
        </footer>
