--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,18 @@
         </thead>
         <tbody style="font-size: 18px; border-color: black;">
             <tr>
+                <td>Final Assessment</td>
+                <td>A User management application that allows users to create teams, projects, and announcements for companies.</td>
+                <td>Angular, Springboot, Maven, CSS, TypeScript, Java, Postman, Git, Eclipse.</td>
+                <td><a href="https://github.com/fasttrackd-student-work/angular-group-final-jan-2024-green-team">Final Assessment</a></td>
+            </tr>
+            <tr>
+                <td>Who's Who</td>
+                <td>A Music guessing game pulling tracks from Spotify.</td>
+                <td>Angular, TypeScript,CSS, JPA, Postman, Springboot, Git, Eclipse, Maven</td>
+                <td><a href="https://github.com/fasttrackd-student-work/angular-whos-who-jan-2024-team-4">Whos's Who</a></td>
+            </tr>
+            <tr>
                 <td>Social Media</td>
                 <td>A Twitter inspired social media application made with a group of 2 others.</td>
                 <td>Java, PostgreSQL, JPA, Postman, Springboot, Git, Eclipse, Maven</td>
